# winXoundFork

./: AUTHORS  CSoundSyntax.plist  History.txt  INSTALL_INFO_READ_ME_FIRST.txt  ImageAndTextCell.h  ImageAndTextCell.mm  LuaSyntax.plist  Makefile  Makefile.am  Makefile.am~  Makefile.in  PythonSyntax.plist  README  README.md  SeparatorCell.mm  TextEditorView.h  TextEditorView.mm  UserDefaults.plist  WinXound-Info.plist  WinXound_Net.sln  WinXound_Prefix.pch  aclocal.m4  analysis.plist  config.h  config.status  configure  configure.ac  configure.ac.bak  configure.ac~  libtool  main.m  preconfigure  winxound.desktop  winxound.desktop_  wxAbout.h  wxAbout.mm  wxAbout.xib  wxAnalysis.h  wxAnalysis.mm  wxAnalysisWindow.xib  (+34 more)
English.lproj/: Credits.rtf  MainMenu.xib  wxDocument.xib
Icons/: WinXound2.icns  csd_document.icns  drag.icns
RTConsole/: Program.cs  RTConsole.csproj  ReadMe.txt
ScintillaTextEditor/: ReadMe.txt  ScintillaTextEditor.csproj  ScintillaTextEditor.sln  TextEditor.Designer.cs  TextEditor.cs  TextPrinter.cs  TextView.cs  TextViewOld.cs
WinXound.xcodeproj/: project.pbxproj  teto.mode1v3  teto.pbxuser
WinXound_Net/: FileAccessRights.cs  FormAbout.Designer.cs  FormAbout.cs  FormAbout.resx  FormAnalysis.Designer.cs  FormAnalysis.cs  FormAnalysis.resx  FormFindAndReplace.Designer.cs  FormFindAndReplace.cs  FormFindLine.Designer.cs  FormFindLine.cs  FormInfo.Designer.cs  FormInfo.cs  FormInfo.resx  FormInputBox.Designer.cs  FormInputBox.cs  FormInsertHeader.Designer.cs  FormInsertHeader.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormNew.Designer.cs  (+46 more)
(+395 files in other folders)
